# bgp-anomaly-detection

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  setup.py
bgp_anomaly_detection/: __init__.py  analyse.py  autonomous_system.py  location.py  logging.py  machine.py  mrt_file.py  paths.py
bgp_anomaly_detection/tests/: sample_data.py  test_autonomous_system.py  test_machine.py  test_snapshot.py
data_visualization/feature_distribution/month/: join.py  main.py  (+2 more)
data_visualization/lstm_input/: AS_13335_data.csv  AS_134578_data.csv  AS_174_data.csv  AS_18403_data.csv  AS_198608_data.csv  AS_198887_data.csv  AS_20473_data.csv  AS_24748_data.csv  AS_262589_data.csv  AS_30764_data.csv  AS_30848_data.csv  AS_3188_data.csv  AS_3356_data.csv  AS_34757_data.csv  AS_43207_data.csv  AS_51395_data.csv  AS_52468_data.csv  AS_57916_data.csv  AS_59445_data.csv  AS_7713_data.csv  AS_8274_data.csv  most_volatile.txt
data_visualization/tables/: 010620230000.csv  as_change_counts_day.csv  as_change_counts_day.ods  as_change_counts_month.csv  as_change_counts_month.ods  as_change_counts_week.csv  as_change_counts_week.ods  as_change_counts_year.csv  as_change_counts_year.ods  statistical_info_with_zeros.csv
data_visualization/volatility/: high_volatility_combined.csv  low_volatility_combined.csv  medium_volatility_combined.csv  volatility_mape_joined_features.csv
src/bgp_anomaly_detection/: autonomous_system.py  interface.py  location.py  logging.py  machine.py  mrt_file.py  paths.py
tests/: test_autonomous_system.py  test_machine.py  test_snapshot.py
(+70 files in other folders)
